# old-engram

./: .dockerignore  .gitignore  .gitmodules  Dockerfile  Dockerfile.prod  README.md  build.sh  engram-stack.yaml  entrypoint.sh  run.sh
.github/workflows/: deploy-code.yml  main.yml  reload-api.yml
admin/: .gitignore  requirements.txt
admin/adminsite/: manage.py
admin/src/: AdminApp.ts
android/engram/: build.gradle  settings.gradle
api/: .env  api.ts  config.ts  package-lock.json  package.json
api/admin/: AdminController.ts
backlog/: package.json
be/: .gitignore  Database.js  Dockerfile  build.sh  env.js  index.js  package-lock.json  package.json  run.sh
browser/: Readme.md
calendar/: package.json
chat/: README.md
chat/be/rust/: Cargo.toml
chat/be/rust/src/: main.rs
chrome-extension/: main.js  manifest.json  popup.css  popup.html  popup.js
docker/: Dockerfile  docker-compose.yaml
eg/: CHANGELOG.md  Makefile  main.c
fe/: package-lock.json  package.json  tsconfig.json
flashcards/: import.html  import.js  import.ts  index.html  index.js  styles.css
graph/: package.json
gtk/: Cargo.toml
learn/: package.json
meet/: package.json  server.js
music/: package.json
nginx/: api.engramhq.xyz  nginx.conf
notes/: package.json
os/: os.c
pages/: package.json
paper/: Makefile  main.c  paper.c
react-native/: App.tsx  GlobalStyle.ts  app.json  package.json  types.tsx
record/: .gitignore  Makefile  main.c
server/: Makefile  server.c
ui/: package.json
vanilla/: package.json
vocab/: .gitignore  package.json  server.js
(+587 files in other folders)
