[package]
name = "rust"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mongodb = "2.0.0-beta.3"
futures = "0.3"
serde = { version = "1.0", features = ["derive"] }
bson = "0.6.0"

[dependencies.rocket]
version = "0.5.0-rc.1"
features = ["json"]
